syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package todo;

// The greeting service definition.
service list {
  rpc Sync (NoParams) returns (List) {}
  rpc Toggle (IDRequest) returns (SimpleReply) {}
  rpc Push (String) returns (SimpleReply) {}
  rpc PushItem (Item) returns (SimpleReply) {}
  rpc Del (IDRequest) returns (SimpleReply) {}
  rpc Edit (IDRequest) returns (SimpleReply) {}
  rpc Current (NoParams) returns (Item) {}
}


message NoParams {}
message String {
  string contents = 1;
}
message SimpleReply {
  string message = 1;
}

// Item in list
message Item  {
  string id = 1;
  bool isDone = 2;
  string contents = 3;
}

message List {
  repeated Item items = 1;
}

// The request message containing the user's name.
message IDRequest {
  string id = 1;
}
